@@ -1,0 +1,9 @@
+<header>Rename group if username changes?</header>
+
+When editing a user whose primary group is the same as his username, this
+option can be used to rename the group if the user's name is changed. This
+is recommended for consistency's sake, but may break other configuration files
+that contain the old group name.
+
+<footer>
+
